--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="helpers.js"></script>
+    <script src="libsignal-protocol.js"></script>
+    <script src="InMemorySignalProtocolStore.js"></script>
+    <script src="SignalProtocolStore_test.js"></script>
+    <!-- <script src="test.js"></script> -->
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
